# riva-codec

./: CMakeLists.txt  README.md  compile
cmake/: git-version.cmake
src/: codec.c  dict.h  osi-proto.h  osi.c  osi.h  pdu-idx.c  pdu-idx.h  pdu.c  pdu.h
src/s1ap/: s1ap.c  s1ap.h  s1ap_dict.c  s1ap_dict.h  s1ap_fields.c  s1ap_fields.h  s1ap_proto_ies.c  s1ap_proto_ies.h
